# flet

./: LICENSE  README.md
password_generator/: .flake8  README.md  pyproject.toml  tox.ini
password_generator/password_generator/: app.py
password_generator/src/: app.py
password_generator/src/core/: password_service.py
password_generator/src/domain/: models.py  password_generator.py
password_generator/src/views/: password_view.py
password_generator/tests/: test_app.py
password_generator/tests/core/: test_password_service.py
password_generator/tests/domain/: test_models.py  test_password_generator.py
password_generator/tests/view/: test_password_view.py
