[tool.poetry]
name = "password-generator"
version = "0.1.0"
description = "An application to generate passwords"
authors = ["Alefe Freire <alefeofdealmeida@gmail.com>"]
readme = "README.md"
packages = [{include = "password_generator"}]

[tool.poetry.dependencies]
python = "^3.12"
flet = "^0.24.1"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.10.0"
mypy = "^1.3.0"
isort = "^5.12.0"
black = "^23.3.0"
tox = "^4.6.4"
flake8 = "^6.1.0"
flake8-bugbear = "^23.9.16"
flake8-quotes = "^3.3.2"
flake8-pytest = "^1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
